@@ -31,6 +31,9 @@ not yet  BJH  Release 10.92.00
               jpeg2ktopam: Fix crash whenever the program fails.  Broken in
               Netpbm 10.42 (March 2008).
 
+              pamtojpeg2k: Fix failure with most -progression values.  Always
+              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).
+
               pamarith: Fix crash with -compare where inputs are PBM or
               BLACKANDWHITE PAM.  Broken in Netpbm 10.14 (February 2003).
 
